update sort
