# node_app_01/src/docs/swagger.json
@@ -9,18 +9,15 @@
 		"schemas": {
 			"IUser": {
 				"properties": {
-					"email": {
+					"name": {
 						"type": "string"
 					},
-					"name": {
+					"email": {
 						"type": "string"
 					}
 				},
-				"required": [
-					"email",
-					"name"
-				],
-				"type": "object"
+				"type": "object",
+				"additionalProperties": false
 			},
 			"UserCreationParams": {
 				"properties": {
@@ -31,12 +28,20 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"name",
-					"email"
-				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"Partial_IUser_": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
 			}
 		},
 		"securitySchemes": {}
@@ -103,39 +108,6 @@
 						}
 					}
 				}
-			}
-		},
-		"/v1/users/{num}": {
-			"get": {
-				"operationId": "GetUser10",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/IUser"
-									},
-									"type": "array",
-									"nullable": true
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "num",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
 			}
 		},
 		"/v1/users/{id}": {
@@ -205,7 +177,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IUser"
+								"$ref": "#/components/schemas/Partial_IUser_"
 							}
 						}
 					}
